--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A simple project for educational purpose."
 readme = "README.md"
 dependencies = [
     "click>=8.1.7",
+    "flask>=3.1.0",
 ]
 requires-python = ">=3.10"
 
@@ -20,4 +21,3 @@ requires = [
 ]
 build-backend = "pdm.backend"
 
-[tool]
