--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "flask>=3.1.0",
     "flask-wtf>=1.2.2",
     "wtforms>=3.2.1",
+    "flask-httpauth>=4.8.0",
 ]
 requires-python = ">=3.10"
 
